src/bin/snapshots/cg2util__cli_control-5.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util control grp +cpu,+memory\")"
---
Ok(
    Cli {
        command: Control(
            ControlCommand {
                cgroup: "grp",
                control: ControlList {
                    controllers: [
                        ControllerFlag {
                            name: "cpu",
                            _enable: true,
                        },
                        ControllerFlag {
                            name: "memory",
                            _enable: true,
                        },
                    ],
                    inherit: None,
                },
                auto: false,
            },
        ),
    },
)
