src/bin/snapshots/cg2util__cli_control-9.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util control grp --auto\")"
---
Ok(
    Cli {
        command: Control(
            ControlCommand {
                cgroup: "grp",
                control: ControlList {
                    controllers: [],
                    inherit: None,
                },
                auto: true,
            },
        ),
    },
)
