src/bin/snapshots/cg2util__cli_create-4.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util create grp\")"
---
Ok(
    Cli {
        command: Create(
            CreateCommand {
                cgroup: "grp",
            },
        ),
    },
)
