src/bin/snapshots/cg2util__cli_create-5.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util create grp extra\")"
---
Err(
    "error: unexpected argument 'extra' found\n\nUsage: cg2util create <CGROUP>\n\nFor more information, try '--help'.\n",
)
